# IV-2021-2022

./: .gitignore  Dockerfile  README.md  aaaa.env  configuracion.py  iv.yaml  mylogger.py  mylogging.py  pyproject.toml  tasks.py
.circleci/: config.yml
.github/workflows/: config.yml  subida-dockerhub.yml  subida_dockerhub.yml  tests.yml
configuration/: config.ini  configuracion.py
data/: README.md  Restaurant_Reviews.tsv
docs/: configuracion_logging.md  contenedor_docker.md  contenedores.md  integracion_continua.md  lenguaje.md  personas.md  poetry_e_invoke.md  test.md
resenia/: aspectos.py  conjunto_resenias.py  resenia.py
review_set/: aspectos.py  conjunto_resenias.py
src/: aspectos.py  conjunto_resenias.py  resenia.py
test/: test_configuracion_logging.py  test_hello_world.py  test_resenia.py
