[tool.poetry]
name = "IV-2021-2022"
version = "0.0.4"
description = "Proyecto de la asignatura \"Infraestructura Virtual\", cursada en el curso 2021/2022 en la Universidad de Granada."
authors = ["JAntonioVR"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
